[package]
name = "graphdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
