[package]
name = "graph_traversal"
version = "0.0.1"
edition = "2021"
description = "Traverse graphs super fast while keeping the memory consumption low."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "2.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
